// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`idle-rule-patterns-form Renders \`idle-rule-patterns-form\` with custom props 1`] = `
<c-patterns-field-stub
  alarm-attributes="[object Object]"
  alarm-excluded-attributes="v.last_update_date,v.last_event_date,resolved"
  entity-excluded-items="last_event_date"
  some-required="some-required"
  value="[object Object]"
  with-entity="with-entity"
/>
`;

exports[`idle-rule-patterns-form Renders \`idle-rule-patterns-form\` with default props 1`] = `
<c-patterns-field-stub
  alarm-attributes="[object Object]"
  alarm-excluded-attributes="v.last_update_date,v.last_event_date,resolved"
  entity-excluded-items="last_event_date"
  some-required="some-required"
  value="[object Object]"
  with-alarm="true"
  with-entity="with-entity"
/>
`;
